--- a/php/www.conf
+++ b/php/www.conf
@@ -2,6 +2,8 @@
 error_log = /dev/stderr
 
 [www]
+listen.owner = nobody
+listen.group = nobody
 listen = 127.0.0.1:9000
 pm = ondemand
 pm.max_children = 100
